Fixed animation loading

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -35,8 +35,8 @@
 			<div class="row">
 				<div class="large-6 medium-5 columns anim-content">
 					<h2><span>Gestion <span>par </span></span><span>la</span> <span>valeur</span></h2>
-					<h3>L’essentiel avant tout !</h3>
-					<p>Parce que votre Time-to-Market est notre première priorité : Valorisez vos besoins, et reprenez le contrôle de vos projets. Ensemble, développons avant tout ce qui compte vraiment.</p>
+					<h3>Maximiser la création de valeur</h3>
+					<p>Ensemble, engageons-nous à produire ce qui aura le plus de valeur pour vos utilisateurs en priorisant en fonction du ratio valeur complexité.</p>
 				</div>
 				<div class="large-6 medium-7 columns anim-item">
 					{% if ress.isMobile ==  true %}
@@ -59,7 +59,7 @@
 			<div class="row">
 				<div class="large-6 large-push-6 medium-5 columns anim-content">
 					<h2><span>Gestion par </span><span>les</span> <span>risques</span></h2>
-					<h3>Anticiper l’imprévu !</h3>
+					<h3>Piloter nos projets par le risque</h3>
 					<p>Plus que jamais, l’imprévisible est toujours le pire ennemi du projet. C’est en anticipant conjointement les futurs écueils que nous protégeons vos projets afin d’en assurer leur totale réussite.</p>
 				</div>
 				<div class="large-6 large-pull-6 medium-7 columns anim-item">
@@ -87,7 +87,7 @@
 				</a>
 				<div class="large-5 medium-5 columns anim-content">
 					<h2><span>Amélioration</span><span> continue</span></h2>
-					<h3>Se perfectionner sans cesse</h3>
+					<h3>Prototyper et améliorer</h3>
 					<p>Tous les projets sont différents. Nous profitons de cette diversité pour apprendre continuellement et toujours viser l’excellence. Ainsi, nous mettons à profit ces retours d’expérience au service de vos produits.</p>
 				</div>
 				<div class="large-7 medium-7 columns anim-item">
@@ -108,8 +108,8 @@
 			<div class="row">
 				<div class="large-6 large-push-6 medium-5  columns anim-content">
 					<h2>Extia</h2>
-					<h3>Paré à toute éventualité !</h3>
-					<p>Nous tirons notre expertise d’Extia, qui met à votre disposition ses meilleurs consultants qui vous garantissent la réussite de votre projet au Time-To-Market optimisé, aux risques maîtrisés, avec les méthodes de gestion de projet les plus rodées. </p>
+					<h3>Booster nos projets avec l’energie d’Extia</h3>
+					<p>Nous tirons notre expertise d’Extia, qui met à votre disposition ses meilleurs consultants et qui vous garantissent la réussite de votre projet au Time-To-Market optimisé, aux risques maîtrisés, avec les méthodes de gestion de projet les plus rodées.</p>
 					<a href="/agilite" class="button">En savoir plus</a>
 				</div>
 				<div class="large-6 large-pull-6 medium-7  columns">
