Fix and add contact link, add svg

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -110,7 +110,7 @@
 					<h2>Extia</h2>
 					<h3>Booster nos projets avec l’energie d’Extia</h3>
 					<p>Nous tirons notre expertise d’Extia, qui met à votre disposition ses meilleurs consultants et qui vous garantissent la réussite de votre projet au Time-To-Market optimisé, aux risques maîtrisés, avec les méthodes de gestion de projet les plus rodées.</p>
-					<a href="/agilite" class="button">En savoir plus</a>
+					<a href="http://www.extia.fr" target=_blank class="button">Extia.fr</a>
 				</div>
 				<div class="large-6 large-pull-6 medium-7  columns">
 				{% if ress.isMobile ==  true %}
