--- a/views/team.html.twig
+++ b/views/team.html.twig
@@ -21,13 +21,13 @@
 					</div>
 				</div>
 		</section>
-		<section class="content {% if ress.isMobile ==  false %}desktop{% endif %}">
+		<!--<section class="content {% if ress.isMobile ==  false %}desktop{% endif %}">
 			<div class="row cene">
 				<div class="large-12 medium-7 columns">
 						<img src="http://placehold.it/1600x500&text=cène" alt="">
 				</div>
 			</div>
-		</section>
+		</section>-->
 		<section class="svg-anim" data-color="col1">
 			<div class="row">
 				<div class="large-8 medium-7 columns">
