--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -53,13 +53,7 @@ $large-margin:800;
 @import "components/menu";
 @import "components/footer";
 
+@import "sections/team";
 @import "sections/home";
 @import "sections/agilite";
 @import "sections/contact";
-
-
-
-
-
-
-
