--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -31,9 +31,7 @@
 					<a class='nav-link enabled {% if page == 'team' %}current{% endif %}' href="/team" data-pos="2">Team</a>
 					<a class='nav-link enabled {% if page == 'agilite' %}current{% endif %}' href="/agilite" data-pos="3">Agilite</a>
 					<!--<a class='nav-link enabled {% if page == 'contact' %}current{% endif %}' href="/contact" data-pos="4">Contact</a>-->
-					<div class="nav-link-contact hide-for-small-only">
-						<a href="#">Contact</a>
-					</div>
+					<a class="nav-link-contact hide-for-small-only">Contact</a>
 					<div class="nav-contact show-for-small-only">
 						<a href="tel:0146999191">Phone</a><!--
 						--><a href="mailto:contact@kilix.fr">Email</a>
