Added animation for fade

--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -67,6 +67,11 @@ $large-margin:800;
 	to{transform: translateY(0%);}
 }
 
+@keyframes fade{
+	from{ opacity: 0; }
+	to{ opacity: 1; }
+}
+
 
 /* COMPONENTS */ 
 
