--- a/views/scripts-debug.html.twig
+++ b/views/scripts-debug.html.twig
@@ -6,7 +6,7 @@
 <script src="/assets/js/vendor/history.min.js"></script>
 <script src="/assets/js/vendor/waypoints.min.js"></script>
 <script src="/assets/js/vendor/snap.svg.min.js"></script>
-<script src="/assets/js/kilix.js"></script>
+<script src="/assets/js/kilix.min.js"></script>
 
 
 <!-- HOME -->
