--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -33,8 +33,8 @@
 					<!--<a class='nav-link enabled {% if page == 'contact' %}current{% endif %}' href="/contact" data-pos="4">Contact</a>-->
 					<a class="nav-link-contact hide-for-small-only">Contact</a>
 					<div class="nav-contact show-for-small-only">
-						<a href="tel:0146999191">Phone</a><!--
-						--><a href="mailto:contact@kilix.fr">Email</a>
+						<a class="phone-contact" href="tel:0146999191">Phone</a><!--
+						--><a class="mail-contact" href="mailto:contact@kilix.fr">Email</a>
 					</div>
 				</div>
 				<div class="back-to-top show-for-medium-up">
@@ -57,7 +57,8 @@
 				<div class="medium-8 medium-centered columns">
 					<div class="medium-4 columns">
 						<strong>Kilix/Extia</strong> <br>
-						1, avenue de la Cristallerie <br>Entrée A – 6ème étage <br>92310 SÈVRES
+						<a href="https://maps.google.fr/maps?q=google+maps+1+avenue+de+la+cristallerie&ie=UTF-8&hq=&hnear=0x47e67b0491111b29:0x1e40b81275175848,1+Avenue+de+la+Cristallerie,+92310+S%C3%A8vres&gl=fr&ei=S0DYUqWaOKO90QX4roHIDw&ved=0CDIQ8gEwAA">1, avenue de la Cristallerie</a>
+						 <br>Entrée A – 6ème étage <br>92310 SÈVRES
 					</div>
 					<div class="medium-4 columns">
 						<strong>Contactez-nous</strong> <br>
