--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -26,8 +26,8 @@
 					
 				</div>
 				<div class="medium-8 columns intro-content">
-					<h2>Ici un petit titre</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, rem, unde, possimus, sapiente iure officiis accusantium ducimus consequatur praesentium aperiam deserunt asperiores numquam eum ipsam maiores sequi voluptas cupiditate vero! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, rem, unde, possimus, sapiente iure officiis.</p>
+					<h2>L’agence digitale Agile by EXTIA</h2>
+					<p>Une agence digitale se doit de maîtriser les différentes technologies en appliquant des contraintes simples mais très fortes : tenir ces engagements de délais, périmètre et enfin de coûts. Pour Kilix, la meilleur manière de produire vos projets est de les respecter en appliquant une stratégie Agile. Nous pilotons nos projets par la valeur, les risques et dans un souci d’amélioration continue, en  s’appuyant sur les forces de production d’Extia.</p>
 					<a class="homepage losange"><i class="icon-arrow-down4 losange-arrow"> </i></a>
 				</div>
 			</div>
