--- a/web/assets/scss/components/menu.scss
+++ b/web/assets/scss/components/menu.scss
@@ -166,11 +166,19 @@ $mobile-contact-height: 40;
 			.phone-contact{
 				background:transparent url('../img/svg/mobile.svg') center center no-repeat;
 				text-indent: -9999px;
+
+				&:hover{
+					background:transparent url('../img/svg/mobile.svg') center center no-repeat;
+				}
 			}
 
 			.mail-contact{
 				background:transparent url('../img/svg/mail.svg') center center no-repeat;
 				text-indent: -9999px;
+
+				&:hover{
+					background:transparent url('../img/svg/mail.svg') center center no-repeat;
+				}
 			}
 		}
 		.nav-link-contact{
