--- a/web/assets/scss/components/logo-home.scss
+++ b/web/assets/scss/components/logo-home.scss
@@ -50,60 +50,60 @@
 .kilix-dispatch svg polygon {
   transform: translateX(0) translateY(0) scale(1) rotate(0);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(1) {
+.landing-home .large-8:hover polygon:nth-child(1) {
   transform: translateX(-188px) translateY(-150px) scale(1.2) rotate(-160deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(2) {
+.landing-home .large-8:hover polygon:nth-child(2) {
   transform: translateX(-328px) translateY(40px) scale(1.9) rotate(-44deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(3) {
+.landing-home .large-8:hover polygon:nth-child(3) {
   transform: translateX(-42px) translateY(126px) scale(1.5) rotate(-33deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(4) {
+.landing-home .large-8:hover polygon:nth-child(4) {
   transform: translateX(-174px) translateY(-126px) scale(1.3) rotate(-165deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(5) {
+.landing-home .large-8:hover polygon:nth-child(5) {
   transform: translateX(-68px) translateY(-76px) scale(1.3) rotate(187deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(6) {
+.landing-home .large-8:hover polygon:nth-child(6) {
   transform: translateX(38px) translateY(-272px) scale(1) rotate(280deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(7) {
+.landing-home .large-8:hover polygon:nth-child(7) {
   transform: translateX(-174px) translateY(-320px) scale(1.3) rotate(-94deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(8) {
+.landing-home .large-8:hover polygon:nth-child(8) {
   transform: translateX(-80px) translateY(300px) scale(1.5) rotate(183deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(9) {
+.landing-home .large-8:hover polygon:nth-child(9) {
   transform: translateX(350px) translateY(-78px) scale(1.9) rotate(-43deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(10) {
+.landing-home .large-8:hover polygon:nth-child(10) {
   transform: translateX(-290px) translateY(170px) scale(1.2) rotate(311deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(11) {
+.landing-home .large-8:hover polygon:nth-child(11) {
   transform: translateX(222px) translateY(170px) scale(1.8) rotate(227deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(12) {
+.landing-home .large-8:hover polygon:nth-child(12) {
   transform: translateX(260px) translateY(40px) scale(1.4) rotate(-117deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(13) {
+.landing-home .large-8:hover polygon:nth-child(13) {
   transform: translateX(180px) translateY(-230px) scale(1.8) rotate(138deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(14) {
+.landing-home .large-8:hover polygon:nth-child(14) {
   transform: translateX(380px) translateY(-40px) scale(1.4) rotate(-121deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(15) {
+.landing-home .large-8:hover polygon:nth-child(15) {
   transform: translateX(120px) translateY(190px) scale(1.4) rotate(-98deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(16) {
+.landing-home .large-8:hover polygon:nth-child(16) {
   transform: translateX(180px) translateY(0px) scale(1.2) rotate(51deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(17) {
+.landing-home .large-8:hover polygon:nth-child(17) {
   transform: translateX(20px) translateY(20px) scale(1.5) rotate(-10deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(18) {
+.landing-home .large-8:hover polygon:nth-child(18) {
   transform: translateX(100px) translateY(-40px) scale(1.3) rotate(247deg);
 }
-.kilix-dispatch svg #kilixSvg:hover polygon:nth-child(19) {
+.landing-home .large-8:hover polygon:nth-child(19) {
   transform: translateX(-40px) translateY(60px) scale(1.4) rotate(325deg);
 }
