remove usefull code in layout / fix value animation in IE / switch to debug script

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -78,8 +78,7 @@
 			</div>
 		</footer>
 		<!-- TODO : Par la suite le fichier mix.js générera le min.js -->
-  		{#{% include "scripts-debug.html.twig" %}#}
-  		<script src="/assets/js/scripts.min.js"></script>
-  		{% block scripts %}{% endblock %}
+  		{% include "scripts-debug.html.twig" %}
+  		<!--<script src="/assets/js/scripts.min.js"></script>-->
 	</body>
 </html>
