--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -56,7 +56,7 @@
 			<div class="copyright row">
 				<div class="medium-8 medium-centered columns">
 					<div class="medium-4 columns">
-						<strong>Kilix/Extia</strong> <br>
+						<strong>Kilix by Extia</strong> <br>
 						<a target="_blank" href="https://maps.google.fr/maps?q=google+maps+1+avenue+de+la+cristallerie&ie=UTF-8&hq=&hnear=0x47e67b0491111b29:0x1e40b81275175848,1+Avenue+de+la+Cristallerie,+92310+S%C3%A8vres&gl=fr&ei=S0DYUqWaOKO90QX4roHIDw&ved=0CDIQ8gEwAA">1, avenue de la Cristallerie</a>
 						 <br>Entrée A – 6ème étage <br>92310 SÈVRES
 					</div>
@@ -73,7 +73,7 @@
 					</div>
 				</div>
 				<div class="large-12 columns">
-					Kilix <i class="icon-heart" data-text="est une marque"></i> extia <br>Tous droits réservés Copyright © 2014 Kilix
+					Kilix <i class="icon-heart" data-text="est une marque"></i> Extia <br>Tous droits réservés Copyright © 2014 Kilix
 				</div>
 			</div>
 		</footer>
