fix IE <11 compatibility

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -51,7 +51,7 @@
 		</div>
 		<footer>
 			<div class="map">
-				<iframe width='100%' height='100%' frameBorder='0' src='https://a.tiles.mapbox.com/v3/bulby97.map-zj10lv4w/mm/index.html?secure=1#18/48.82681/2.22268'></iframe>
+				<iframe width='100%' height='100%' frameBorder='0' src='http://a.tiles.mapbox.com/v3/bulby97.map-zj10lv4w/mm/index.html?secure=1#18/48.82681/2.22268'></iframe>
 			</div>
 			<div class="copyright row">
 				<div class="medium-8 medium-centered columns">
