change team page content

--- a/views/team.html.twig
+++ b/views/team.html.twig
@@ -6,7 +6,7 @@
 			<div class="row">
 				<div class="large-8 columns">
 					<h1>Vous et Nous <span></span><i class="icon-arrow-down4"> </i></h1>
-					<p>L’équipe de Kilix est composée d’experts reconnus qui interviennent sur l’ensemble du  projets. 
+					<p>L’équipe Kilix est composée d’experts reconnus qui interviennent sur l’ensemble du  projets. 
 Mais fondamentalement, il y a vous, apportant la vision “produit”.</p>
 				</div>
 			</div>
