Fixed kilix svg doublon

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -6,8 +6,7 @@
 			<div class="row">
 				<div class="large-8 columns">
 					<div class="kilix-dispatch show-for-medium-up">
-						<!-- <svg x="0px" y="0px" id="KILIX-logo" viewBox="0 0 1500 200"></svg> -->
-						<img  x="0px" y="0px" src="assets/img/logo_big.svg" id="KILIX-logo"  viewBox="0 0 1500 200" alt="" class='svg'>
+						<svg x="0px" y="0px" id="KILIX-logo" viewBox="0 0 1500 200"></svg>
 					</div>
 					<h1 class='landing-main-text'>
 						L’agence digitale Agile, <br> by EXTIA <i class="icon-arrow-down4"> </i>
