Home svg fixed, button contact and extia inversed

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -7,7 +7,7 @@
 				<div class="large-8 columns">
 					<div class="kilix-dispatch show-for-medium-up">
 						<!-- <svg x="0px" y="0px" id="KILIX-logo" viewBox="0 0 1500 200"></svg> -->
-						<img  x="0px" y="0px" src="assets/img/logo_big.svg" id="KILIX-logo"  viewBox="0 0 1500 200" alt="" class='svg'>
+						<svg x="0px" y="0px" id="KILIX-logo" viewBox="0 0 1500 200"></svg>
 					</div>
 					<h1 class='landing-main-text'>
 						L’agence digitale Agile, <br> by EXTIA <i class="icon-arrow-down4"> </i>
@@ -106,7 +106,7 @@
 					<h2>Extia</h2>
 					<h3>Booster nos projets avec l’energie d’Extia</h3>
 					<p>Nous tirons notre expertise d’Extia, qui met à votre disposition ses meilleurs consultants et qui vous garantissent la réussite de votre projet au Time-To-Market optimisé, aux risques maîtrisés, avec les méthodes de gestion de projet les plus rodées.</p>
-					<a href="http://www.extia.fr" target=_blank class="button">Extia.fr</a>
+					<a href="http://www.extia.fr" target=_blank class="button">Accéder à Extia.fr</a>
 				</div>
 				<div class="large-6 large-pull-6 medium-7  columns">
 				{% if ress.isMobile ==  true %}
