--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -104,8 +104,8 @@
 			<div class="row">
 				<div class="large-6 large-push-6 medium-5  columns anim-content">
 					<h2>Extia</h2>
-					<h3>Boostez vos projets grâce à l’énergie d’Extia</h3>
-					<p>Nous nous appuyons sur l’expertise d’Extia, acteur reconnu du conseil depuis 7 ans, qui met à votre disposition ses meilleurs consultants et vous garantit l’atteinte de vos objectifs dans les délais impartis.</p>
+					<h3>Boostez vos projets grâce à l'énergie d’Extia</h3>
+					<p>Nous nous appuyons sur l'expertise d’Extia, acteur reconnu du conseil depuis 7 ans, qui met à votre disposition ses meilleurs consultants et vous garantit l'atteinte de vos objectifs dans les délais impartis.</p>
 					<a href="http://www.extia.fr" target=_blank class="button">Accéder à Extia.fr</a>
 				</div>
 				<div class="large-6 large-pull-6 medium-7  columns">
