Added buttons and changed grid in Agilite

--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -28,40 +28,52 @@ Alliée aux principes de l’ amélioration continue elle nous permet d’apport
 				</div>
 		</section>
 		<section class="content {% if ress.isMobile ==  false %}desktop{% endif %}">
-			<div class="row">
-				<article class="large-6 columns agility-item">
+			
+			<article>
+				<div class="row">
 					<h2>Gestion par la Valeur</h2>
-					<div class="large-6 columns">
-						<svg id="AGI-value" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="0 0 393 269"></svg>
-					</div>
-					<div class="large-6 columns">
-						<ul>
-							<li>
-							<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
-								Maximiser l'apport de valeur par le ratio valeur/complexité
-							</li>
-							<li>
+					<div class="large-6 columns agility-item">
+						<div class="large-6 columns">
+							<svg id="AGI-value" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="0 0 393 269"></svg>
+						</div>
+						<div class="large-6 columns">
+							<ul>
+								<li>
 								<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
-								Minimiser le temps de réalisation
-							</li>
-							<li>
-								<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
-								Engagement du client
-							</li>
-							<li>
-								<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
-								Itérations courtes
-							</li>
-							<li>
-								<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
-								Optimisation du ROI
-							</li>
+									Maximiser l'apport de valeur par le ratio valeur/complexité
+								</li>
+								<li>
+									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									Minimiser le temps de réalisation
+								</li>
+								<li>
+									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									Engagement du client
+								</li>
+								<li>
+									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									Itérations courtes
+								</li>
+								<li>
+									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									Optimisation du ROI
+								</li>
 
-						</ul>
+							</ul>
+						</div>
 					</div>
-				</article>
-				<article class="large-6 columns agility-item">
-					<h2>Gestion par les Risques</h2>
+
+					<div class="large-6 columns">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, tenetur, temporibus, inventore, ipsum ut itaque nobis dolore qui facere suscipit pariatur sint alias modi soluta labore repudiandae quidem tempora odio.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, adipisci eligendi totam. Dolorum, a quis sunt quasi adipisci magnam alias aspernatur asperiores suscipit rerum cumque minima mollitia fuga vero id!</p>
+					</div>
+				</div>	
+			</article>
+
+			<article>
+
+				<div class="row">
+				<h2>Gestion par les Risques</h2>
+				<div class="large-6 columns agility-item">
 					<div class="large-6 columns">
 						<svg id="AGI-risk" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="0 0 393 269"></svg>
 					</div>
@@ -85,29 +97,49 @@ Alliée aux principes de l’ amélioration continue elle nous permet d’apport
 							</li>
 						</ul>
 					</div>
-				</article>
-			</div>
-			<div class="row">
-				<article class="large-6 columns agility-item">
+				</div>
+
+				<div class="large-6 columns">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, tenetur, temporibus, inventore, ipsum ut itaque nobis dolore qui facere suscipit pariatur sint alias modi soluta labore repudiandae quidem tempora odio.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, adipisci eligendi totam. Dolorum, a quis sunt quasi adipisci magnam alias aspernatur asperiores suscipit rerum cumque minima mollitia fuga vero id!</p>
+				</div>
+			
+				</div>	
+			</article>
+
+			<article>
+				<div class="row">	
 					<h2>Adaptabilité</h2>
-					<div class="large-6 columns">
-						<svg id="AGI-adapt" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="0 0 393 269"></svg>
+					<div class="large-6 columns agility-item">
+						
+						<div class="large-6 columns">
+							<svg id="AGI-adapt" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="0 0 393 269"></svg>
+						</div>
+						<div class="large-6 columns">
+							<ul>
+								<li>
+									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									Méthode itérative & incrémentale
+								</li>
+								<li>
+									<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
+									Tolérance aux changements même tard dans le projet
+								</li>
+							</ul>
+						</div>
 					</div>
+
 					<div class="large-6 columns">
-						<ul>
-							<li>
-								<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
-								Méthode itérative & incrémentale
-							</li>
-							<li>
-								<img src="assets/img/svg/check.svg" alt="" class='svg checkmark'>
-								Tolérance aux changements même tard dans le projet
-							</li>
-						</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, tenetur, temporibus, inventore, ipsum ut itaque nobis dolore qui facere suscipit pariatur sint alias modi soluta labore repudiandae quidem tempora odio.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, adipisci eligendi totam. Dolorum, a quis sunt quasi adipisci magnam alias aspernatur asperiores suscipit rerum cumque minima mollitia fuga vero id!</p>
 					</div>
-				</article>
-				<article class="large-6 columns agility-item">
-					<h2>Visibilité</h2>
+
+
+				</div>
+			</article>
+			
+			<article>
+				<div class="row">
+				<h2>Visibilité</h2>
+				<div class="large-6 columns agility-item">
 					<div class="large-6 columns">
 						<svg id="AGI-vis" class="svg-agilite svg-auto-size" width="393px" height="269px" x="0px" y="0px" viewBox="0 0 393 269"></svg>
 					</div>
@@ -127,9 +159,15 @@ Alliée aux principes de l’ amélioration continue elle nous permet d’apport
 							</li>
 						</ul>
 					</div>
-				</article>
+				</div>
+
+				<div class="large-6 columns">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, tenetur, temporibus, inventore, ipsum ut itaque nobis dolore qui facere suscipit pariatur sint alias modi soluta labore repudiandae quidem tempora odio.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, adipisci eligendi totam. Dolorum, a quis sunt quasi adipisci magnam alias aspernatur asperiores suscipit rerum cumque minima mollitia fuga vero id!</p>
+				</div>
 				
-			</div>	
+				</div>
+			</article>
+
 		</section>
 		{% include "contact-footer.html.twig" %}
 	</div>
