--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -32,6 +32,7 @@
 					<h2><span>Gestion <span>par </span></span><span>la</span> <span>valeur</span></h2>
 					<h3>Optimiser la création de valeur</h3>
 					<p>Nous pilotons votre projet de A à Z avec vous en fonction de la valeur qu’il apportera à vos utilisateurs. Vous possédez rapidement un produit qui répond à vos besoins et ceux de votre cible.</p>
+					<a data-pos="3" data-scroll="" href="/agilite" class="button enabled">En savoir plus</a>
 				</div>
 				<div class="large-6 medium-7 columns anim-item">
 					{% if ress.isMobile ==  true %}
@@ -56,6 +57,7 @@
 					<h2><span>Gestion par </span><span>les</span> <span>risques</span></h2>
 					<h3>Anticiper pour prévenir les risques</h3>
 					<p>Avec votre collaboration, nous menons dès le début du projet une analyse des risques afin de limiter les retours de vos utilisateurs et ainsi maximiser sa réussite.</p>
+					<a data-pos="3" data-scroll="" href="/agilite" class="button enabled">En savoir plus</a>
 				</div>
 				<div class="large-6 large-pull-6 medium-7 columns anim-item">
 					{% if ress.isMobile ==  true %}
@@ -80,12 +82,13 @@
 				<a class='next-section'>
 					<i class="icon-arrow-down4"> </i>
 				</a>
-				<div class="large-5 medium-5 columns anim-content">
+				<div class="large-6 medium-6 columns anim-content">
 					<h2><span>Amélioration</span><span> continue</span></h2>
 					<h3>Toujours progresser pour viser l’excellence.</h3>
 					<p>Tous les projets sont différents. Nous tirons parti de cette diversité pour apprendre et évoluer sans cesse. Ces retours d’expériences servent l’amélioration de votre produit.</p>
+					<a data-pos="3" data-scroll="" href="/agilite" class="button enabled">En savoir plus</a>
 				</div>
-				<div class="large-7 medium-7 columns anim-item">
+				<div class="large-6 medium-6 columns anim-item">
 					{% if ress.isMobile ==  true %}
 						{% if ress.isTablet == true %}
 							<img src="assets/img/gif/amelio-medium.gif" alt="">
