--- a/web/assets/scss/components/global.scss
+++ b/web/assets/scss/components/global.scss
@@ -64,6 +64,7 @@ a {
 		background:$primary-color;
 		border: 2px solid $primary-color;
 		
+		margin-top:2rem;
 		padding: .5em 1.1em;
 		border-radius: 3px;
 		font-size: 1.3rem;
